# Repository-Intelligence-Engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  cli-and-api.md  project-structure.md  question-answering.md  repository-insights.md
docs/adr/: 0001-hybrid-repository-intelligence-over-pure-rag.md  0002-python-first-before-multi-language-expansion.md  0003-ast-based-extraction-over-tree-sitter.md  0004-best-effort-symbol-resolution-keep-unresolved-edges.md  0005-knowledgebase-as-the-sole-access-boundary.md  0006-self-contained-persisted-artifacts.md  0007-normalized-structured-outputs-at-layer-boundaries.md  0008-retrieval-as-planning-and-execution.md  0009-deterministic-single-pass-orchestration.md  0010-index-based-citation-resolution.md  0011-dataclasses-over-pydantic-for-domain-models.md  0012-deterministic-non-llm-answer-validation.md  0013-external-versioned-prompt-templates.md  0014-independent-composable-analyzers.md  0015-application-service-layer-as-the-sole-boundary.md  0016-pydantic-at-the-api-boundary-only.md  0017-application-level-exception-translation.md  0018-shared-singletons-via-app-state.md  0019-lightweight-request-correlation.md  README.md
examples/demo/: README.md
examples/toy-tasks/: README.md  reporting.py  tasks.py  utils.py
scripts/: analyze_repo.py  ask.py  ask_v2.py  cli.py  ingest_repo.py  serve_api.py
src/codebase_agent/: config.py
tests/api/: test_app.py  test_schemas.py
tests/chunking/: test_python_chunker.py
tests/cli/: test_main.py
tests/embeddings/: test_embedder.py
tests/graph/: test_answer.py  test_pipeline.py  test_retrieve.py  test_router.py
tests/ingestion/: test_discovery.py
tests/insights/: test_models.py  test_runner.py  test_statistics.py
(+131 files in other folders)
