[project]
name = "codebase-agent"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: slower tests that load real model weights or hit external services",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
