[project]
name = "codebase-agent"
version = "0.1.0"
description = "An agent that ingests a codebase and answers grounded, citation-backed questions about it, with deterministic repository analysis and a REST API/CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Twisha Khurana" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: slower tests that load real model weights or hit external services",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
