[project]
name = "codebase-agent"
version = "0.1.0"
description = "A software intelligence platform: static analysis, grounded citation-backed Q&A, and deterministic repository analysis over a codebase, via a REST API and CLI."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Twisha Khurana" }]

[project.scripts]
codebase-agent = "codebase_agent.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: slower tests that load real model weights or hit external services",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
